correct some deprecated methods