@@ -22,7 +22,7 @@ public class DbConnect {
 
 	private DbConnect() {
 		try {
-			Class.forName(driver).newInstance();
+			Class.forName(driver).getDeclaredConstructor().newInstance();
 			// new Driver();
 		}
 		// catch ( ClassNotFoundException e ) {
